// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse_int with non-integer arg radix throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, 2.1);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with non-string arg str throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, 2);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 1);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 37);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with string arg radix throws error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(42, '2');",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, but invalid str for radix: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('uu1', 2);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": NaN,
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, radix 2: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('1100101010101', 2);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 6485,
  },
  "visualiseListResult": undefined,
}
`;

exports[`parse_int with valid args is ok, radix 36: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('uu1', 36);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 39961,
  },
  "visualiseListResult": undefined,
}
`;
